# python-gswap-sdk

./: .gitignore  Agents.md  README.md  pyproject.toml
.github/scripts/: run_unsigned_routes.py
.github/workflows/: ci.yml  gswap-quote.yml  quote.yml
examples/: quote_gusdc_to_gala.py
gswap_sdk/: __init__.py  assets.py  bundler.py  decimal_utils.py  errors.py  event_socket_client.py  events.py  gswap.py  http.py  pending_transaction.py  pools.py  positions.py  quoting.py  signers.py  swaps.py  token.py  tx_waiter.py  validation.py
gswap_sdk/types/: __init__.py  fees.py  sdk_results.py
scripts/: run_public_routes.py  run_readonly_routes.py  run_unsigned_route_checks.py
tests/: test_assets.py  test_pools.py  test_positions.py  test_quoting.py  test_read_only_routes.py  test_token.py  test_validation.py
